# Pets

./: .dockerignore  .gitignore  Dockerfile  docker-compose-deploy.yml  docker-compose-dev.yml  docker-compose.yml  env.example  pyproject.toml  readme.md
.github/workflows/: deploy.yml
api/: admin.py  auth.py  exceptions.py  models.py  serializers.py  tests.py  urls.py  utils.py  views.py
api/management/commands/: get_pets.py
api/migrations/: 0001_initial.py
pets/: settings.py  urls.py
proxy/: Dockerfile  default.conf.tpl
