[tool.poetry]
name = "petsanimal"
version = "0.1.0"
description = "keep record of pets (cats, dogs, ...)"
authors = ["profMsaif <profmsaif@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.2"
psycopg2-binary = "^2.9.3"
starlette = "^0.18.0"
djangorestframework = "^3.13.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
